Added textures to cube along with other things as part of the program